link wrapp fixed

--- a/src/components/side bar/navigation/navigations.scss
+++ b/src/components/side bar/navigation/navigations.scss
@@ -23,12 +23,12 @@
 		}
 
 		.side-bar-icon {
-			font-size: 13px;
+			font-size: 15px;
 			color: themed("icon");
 			transition: all 0.3s;
 
 			.nav-icons {
-				font-size: 13px;
+				font-size: 15px;
 				color: themed("icon");
 				transition: all 0.3s;
 			}
@@ -45,7 +45,7 @@
 
 		.h5text {
 			transition: all 0.3s;
-			font-size: 12px;
+			font-size: 13px;
 		}
 
 		.arrrow-up {
