--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -46,7 +46,7 @@ $themes: (
 		border: $lightBorder,
 		border2: $lightBorder2,
 
-		icon: rgba(38, 38, 38, 0.875),
+		icon: rgba(38, 38, 38, 0.672),
 		shadow: rgba(31, 31, 31, 1),
 		hover: rgba(133, 133, 133, 0.171),
 		glass: rgba(178, 178, 178, 0.22),
@@ -68,7 +68,7 @@ $themes: (
 		border: $darkBorder,
 		border2: $darkBorder2,
 
-		icon: rgba(236, 236, 236, 0.897),
+		icon: rgba(236, 236, 236, 0.755),
 		shadow: rgba(227, 227, 227, 0.309),
 		hover: rgba(133, 133, 133, 0.171),
 		glass: rgba(58, 58, 58, 0.22),
